update forms catch& loader

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -956,6 +956,8 @@
   "boilerplate.containers.Payroll.reset":"إعادة الضبط",
   "boilerplate.containers.Payroll.deleteMessage": "هل أنت متأكد أنك تريد حذف",
   "boilerplate.containers.Payroll.confirmation": "رسالة تأكيدية",
+  "boilerplate.containers.Payroll.applynewshift": "تطبيق الوردية الجديده",
+  
   
   
    
