finish `UpdateInsuranceSalary` page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1422,9 +1422,13 @@
   "boilerplate.containers.Payroll.insurance.arName": "Arabic Name",
   "boilerplate.containers.Payroll.insurance.enName": "English Name",
   "boilerplate.containers.Payroll.insurance.government": "Government",
+  "boilerplate.containers.Payroll.insurance.updateByValue": "Update By Value",
+  "boilerplate.containers.Payroll.insurance.updateByPercent": "Update By %",
   "boilerplate.containers.Payroll.insurance.ownerLegalDescription": "Owner Legal Description",
   "boilerplate.containers.Payroll.insurance.legalDescription": "Legal Description",
+  "boilerplate.containers.Payroll.insurance.saveConfirmMessage": "Basic Salary is bigger than the maximum limit, do you want to continue?",
   "boilerplate.containers.Payroll.insurance.actions": "Actions",
+  "boilerplate.containers.Payroll.insurance.updateSalaryRoundingMessage": "Value Rounding: Values less than or equal to 20 will be ignored and greater that that will be rounded to 100",
   "boilerplate.containers.Payroll.insurance.ownerName": "Owner Name",
   "boilerplate.containers.Payroll.insurance.SInsuranceOrgnizationCreateTitle": "Create Insurance Orgnization",
   "boilerplate.containers.Payroll.insurance.SInsuranceOrgnizationEditTitle": "Edit Insurance Orgnization",
