--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1498,5 +1498,11 @@
   "boilerplate.containers.Payroll.insurance.insured": "مؤمن عليه",
   "boilerplate.containers.Payroll.insurance.address": "العنوان",
   "boilerplate.containers.Payroll.insurance.organizationName": "أسم المنشأة",
-  "boilerplate.containers.Payroll.insurance.insuranceNumber": "الرقم التأميني"
+  "boilerplate.containers.Payroll.insurance.insuranceNumber": "الرقم التأميني",
+  "boilerplate.containers.Payroll.insurance.EmpCode": "كود الموظف",
+  "boilerplate.containers.Payroll.insurance.employeeName": "الموظف",
+  "boilerplate.containers.Payroll.insurance.InsuranceEndDate": "تاريخ الانتهاء",
+  "boilerplate.containers.Payroll.insurance.InsuranceReasone": "السبب",
+  "boilerplate.containers.Payroll.insurance.orgName": "القسم"
+
 }
