--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1424,6 +1424,15 @@
 
   "boilerplate.containers.Payroll.insurance.arName": "Arabic Name",
   "boilerplate.containers.Payroll.insurance.enName": "English Name",
+  "boilerplate.containers.Payroll.insurance.endDate": "End Date",
+  "boilerplate.containers.Payroll.insurance.lastUpdate": "Last Update",
+  "boilerplate.containers.Payroll.insurance.lastUpdateBy": "Last Update By",
+  "boilerplate.containers.Payroll.insurance.notes": "Notes",
+  "boilerplate.containers.Payroll.insurance.StopInsuranceCreateTitle": "Stop Social Insurance",
+  "boilerplate.containers.Payroll.insurance.StopInsuranceEditTitle": "Edit Social Insurance",
+  "boilerplate.containers.Payroll.insurance.reason": "Reason",
+  "boilerplate.containers.Payroll.insurance.employeeName": "Employee Name",
+  "boilerplate.containers.Payroll.insurance.employeeId": "Employee Id",
   "boilerplate.containers.Payroll.insurance.government": "Government",
   "boilerplate.containers.Payroll.insurance.updateByValue": "Update By Value",
   "boilerplate.containers.Payroll.insurance.updateByPercent": "Update By %",
