add missing form validation  translation

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1321,6 +1321,8 @@
   "boilerplate.containers.Payroll.Request.Transaction.checkOut": "عدم تسجيل بصمة انصراف",
 
   "boilerplate.containers.Payroll.vac.code.date": "التاريخ",
+  "boilerplate.containers.Payroll.vac.attachmentIsRequire": "المرفق مطلوب",
+  "boilerplate.containers.Payroll.vac.fromDateLessThanToDate": "'من التاريخ' يجب ان يكون اقل من 'تاريخ الي'",
   "boilerplate.containers.Payroll.vac.code.actions": "الإجراءات",
   "boilerplate.containers.Payroll.vac.code.OfficialVacations": "الاجازات الرسمية",
   "boilerplate.containers.Payroll.vac.code.EditOfficialVacation": "تعديل الإجازة الرسمية",
@@ -1502,7 +1504,7 @@
   "boilerplate.containers.Payroll.insurance.endDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.insurance.lastUpdate": "اخر تعديل",
   "boilerplate.containers.Payroll.insurance.lastUpdateBy": "اخر تحديث بواسطة",
-  "boilerplate.containers.Payroll.insurance.notes": "ملاحظات",
+  "boilerplate.containers.Payroll.insurance.insuranceNumberIsRequire": "الرقم التاميني مطلوب",
   "boilerplate.containers.Payroll.insurance.reason": "السبب",
   "boilerplate.containers.Payroll.insurance.StopInsuranceCreateTitle": "أنشاء ايقاف الموظف",
   "boilerplate.containers.Payroll.insurance.StopInsuranceEditTitle": "تعديل ايقاف الموظف",
@@ -1512,7 +1514,6 @@
   "boilerplate.containers.Payroll.insurance.organizationName": "أسم المنشأة",
   "boilerplate.containers.Payroll.insurance.insuranceNumber": "الرقم التأميني",
   "boilerplate.containers.Payroll.insurance.EmpCode": "كود الموظف",
-  "boilerplate.containers.Payroll.insurance.employeeName": "الموظف",
   "boilerplate.containers.Payroll.insurance.InsuranceEndDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.insurance.InsuranceReasone": "السبب",
   "boilerplate.containers.Payroll.insurance.orgName": "القسم",
