--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1282,7 +1282,9 @@
   "boilerplate.containers.Payroll.Request.Transaction.checkOut": "No Check Out",
 
   "boilerplate.containers.Payroll.vac.employeeName": "Employee Name",
+  "boilerplate.containers.Payroll.vac.attachmentIsRequire": "Attachment Is Require",
   "boilerplate.containers.Payroll.vac.department": "Department",
+  "boilerplate.containers.Payroll.vac.fromDateLessThanToDate": "FromDate Less Than ToDate",
   "boilerplate.containers.Payroll.vac.registrationDate": "Registration Date",
   "boilerplate.containers.Payroll.vac.vacationCode": "Vacation Code",
   "boilerplate.containers.Payroll.vac.vacationName": "Vacation Name",
@@ -1431,11 +1433,10 @@
   "boilerplate.containers.Payroll.insurance.endDate": "End Date",
   "boilerplate.containers.Payroll.insurance.lastUpdate": "Last Update",
   "boilerplate.containers.Payroll.insurance.lastUpdateBy": "Last Update By",
-  "boilerplate.containers.Payroll.insurance.notes": "Notes",
   "boilerplate.containers.Payroll.insurance.StopInsuranceCreateTitle": "Stop Social Insurance",
   "boilerplate.containers.Payroll.insurance.StopInsuranceEditTitle": "Edit Social Insurance",
+  "boilerplate.containers.Payroll.insurance.insuranceNumberIsRequire": "Insurance Number Is Require",
   "boilerplate.containers.Payroll.insurance.reason": "Reason",
-  "boilerplate.containers.Payroll.insurance.employeeName": "Employee Name",
   "boilerplate.containers.Payroll.insurance.employeeId": "Employee Id",
   "boilerplate.containers.Payroll.insurance.government": "Government",
   "boilerplate.containers.Payroll.insurance.updateByValue": "Update By Value",
