create `EmergencyBenefitList` insurance page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1504,6 +1504,12 @@
   "boilerplate.containers.Payroll.insurance.endDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.insurance.lastUpdate": "اخر تعديل",
   "boilerplate.containers.Payroll.insurance.lastUpdateBy": "اخر تحديث بواسطة",
+  "boilerplate.containers.Payroll.insurance.percent1": "1% نسبة",
+  "boilerplate.containers.Payroll.insurance.basicSalary": "المرتب الاساسي",
+  "boilerplate.containers.Payroll.insurance.month": "السنة",
+  "boilerplate.containers.Payroll.insurance.employeeNumber": "عدد الموظفين",
+  "boilerplate.containers.Payroll.insurance.year": "الشهر",
+  "boilerplate.containers.Payroll.insurance.onlyInsured": "المؤمن عليهم فقط",
   "boilerplate.containers.Payroll.insurance.insuranceNumberIsRequire": "الرقم التاميني مطلوب",
   "boilerplate.containers.Payroll.insurance.reason": "السبب",
   "boilerplate.containers.Payroll.insurance.StopInsuranceCreateTitle": "أنشاء ايقاف الموظف",
