--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1431,6 +1431,12 @@
   "boilerplate.containers.Payroll.insurance.arName": "Arabic Name",
   "boilerplate.containers.Payroll.insurance.enName": "English Name",
   "boilerplate.containers.Payroll.insurance.endDate": "End Date",
+  "boilerplate.containers.Payroll.insurance.year": "Year",
+  "boilerplate.containers.Payroll.insurance.employeeNumber": "Employee Number",
+  "boilerplate.containers.Payroll.insurance.month": "Month",
+  "boilerplate.containers.Payroll.insurance.percent1": "1% Percent",
+  "boilerplate.containers.Payroll.insurance.basicSalary": "Basic Salary",
+  "boilerplate.containers.Payroll.insurance.onlyInsured": "Only The Insured",
   "boilerplate.containers.Payroll.insurance.lastUpdate": "Last Update",
   "boilerplate.containers.Payroll.insurance.lastUpdateBy": "Last Update By",
   "boilerplate.containers.Payroll.insurance.StopInsuranceCreateTitle": "Stop Social Insurance",
