start fix warnings in human resources

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -957,6 +957,7 @@
   "boilerplate.containers.Payroll.deleteMessage": "هل أنت متأكد أنك تريد حذف",
   "boilerplate.containers.Payroll.confirmation": "رسالة تأكيدية",
   "boilerplate.containers.Payroll.applynewshift": "تطبيق الوردية الجديده",
+  "boilerplate.containers.Payroll.Actions": "الإجراءات",
   
   
   
