--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -935,6 +935,7 @@
   "boilerplate.containers.Payroll.deleteMessage":"Are You Sure You Want To Delete",  
   "boilerplate.containers.Payroll.confirmation": "Confirmation Message",  
   "boilerplate.containers.Payroll.applynewshift": "Apply new shift",
+  "boilerplate.containers.Payroll.Actions": "Actions",
 
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
