finish `PositionOfGuaranteesAndContradictions` insurance page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1432,6 +1432,13 @@
   "boilerplate.containers.Payroll.insurance.arName": "Arabic Name",
   "boilerplate.containers.Payroll.insurance.enName": "English Name",
   "boilerplate.containers.Payroll.insurance.endDate": "End Date",
+  "boilerplate.containers.Payroll.insurance.hiredFromAtLeast3Months": "Hired From At Least 3 Months",
+  "boilerplate.containers.Payroll.insurance.socialInsuranceID": "Social Insurance ID",
+  "boilerplate.containers.Payroll.insurance.all": "All",
+  "boilerplate.containers.Payroll.insurance.60AndUp": "60 And Up",
+  "boilerplate.containers.Payroll.insurance.lessThan60": "Less than 60",
+  "boilerplate.containers.Payroll.insurance.employeeAgeAtEndOfMonth": "Employee Age At End Of Month",
+  "boilerplate.containers.Payroll.insurance.age": "Age",
   "boilerplate.containers.Payroll.insurance.year": "Year",
   "boilerplate.containers.Payroll.insurance.employeeNumber": "Employee Number",
   "boilerplate.containers.Payroll.insurance.month": "Month",
