create startup `SocialInsuranceReport` insurance page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1507,7 +1507,7 @@
   "boilerplate.containers.Payroll.insurance.lastUpdateBy": "اخر تحديث بواسطة",
   "boilerplate.containers.Payroll.insurance.percent1": "1% نسبة",
   "boilerplate.containers.Payroll.insurance.basicSalary": "المرتب الاساسي",
-  "boilerplate.containers.Payroll.insurance.hiredFromAtLeast3Months": "معينةن منذ 3 أشهر علي الاقل",
+  "boilerplate.containers.Payroll.insurance.hiredFromAtLeast3Months": "معينون منذ 3 أشهر علي الاقل",
   "boilerplate.containers.Payroll.insurance.socialInsuranceID": "الرقم التاميني",
   "boilerplate.containers.Payroll.insurance.60AndUp": "60 سنة فأكثر",
   "boilerplate.containers.Payroll.insurance.lessThan60": "اقل من 60 سنة",
