--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1513,5 +1513,13 @@
   "boilerplate.containers.Payroll.medicalInsurance.familyCount": "Family Count",
   "boilerplate.containers.Payroll.medicalInsurance.medicalEndDate": "Medical End Date",
   "boilerplate.containers.Payroll.medicalInsurance.medicalCardNumber": "Medical Card Number",
-  "boilerplate.containers.Payroll.medicalInsurance.cardExpireDate": "Card Expire Date"
+  "boilerplate.containers.Payroll.medicalInsurance.cardExpireDate": "Card Expire Date",
+  "boilerplate.containers.Payroll.medicalInsurance.MedicalTypes": "Medical Type",
+  "boilerplate.containers.Payroll.medicalInsurance.MedicalInsuranceCenters": "Medical Insurance Center",
+  "boilerplate.containers.Payroll.medicalInsurance.totalValue": "Total Value",
+  "boilerplate.containers.Payroll.medicalInsurance.employeeShare": "Employee Share",
+  "boilerplate.containers.Payroll.medicalInsurance.fromDate": "From Date",
+  "boilerplate.containers.Payroll.medicalInsurance.orgName": "orgName",
+  "boilerplate.containers.Payroll.medicalInsurance.EmpCode": "Emp.Code",
+  "boilerplate.containers.Payroll.medicalInsurance.employeeName": "Employee Name"
 }
