--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1520,7 +1520,19 @@
   "boilerplate.containers.Payroll.medicalInsurance.MedicalInsuranceCenters": "Medical Insurance Center",
   "boilerplate.containers.Payroll.medicalInsurance.totalValue": "Total Value",
   "boilerplate.containers.Payroll.medicalInsurance.employeeShare": "Employee Share",
+  "boilerplate.containers.Payroll.medicalInsurance.companyShare": "Company Share",
   "boilerplate.containers.Payroll.medicalInsurance.fromDate": "From Date",
+  "boilerplate.containers.Payroll.medicalInsurance.subscriptionDate": "Subscription Date",
+  "boilerplate.containers.Payroll.medicalInsurance.month": "Month",
+  "boilerplate.containers.Payroll.medicalInsurance.fatherNumbers": "Father Numbers",
+  "boilerplate.containers.Payroll.medicalInsurance.wifeNumbers": "Wife Numbers",
+  "boilerplate.containers.Payroll.medicalInsurance.childrenNumbers": "Children Numbers",
+  "boilerplate.containers.Payroll.medicalInsurance.value": "Value",
+  "boilerplate.containers.Payroll.medicalInsurance.employeeId": "Employee Id",
+  "boilerplate.containers.Payroll.medicalInsurance.lastUpdateBy": "Last Update By",
+  "boilerplate.containers.Payroll.medicalInsurance.lastUpdate": "Last Update",
+  "boilerplate.containers.Payroll.medicalInsurance.actions": "Actions",
+  "boilerplate.containers.Payroll.medicalInsurance.year": "Year",
   "boilerplate.containers.Payroll.medicalInsurance.orgName": "orgName",
   "boilerplate.containers.Payroll.medicalInsurance.EmpCode": "Emp.Code",
   "boilerplate.containers.Payroll.medicalInsurance.employeeName": "Employee Name"
