create startup `Form2Insurance` report page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1504,7 +1504,9 @@
   "boilerplate.containers.Payroll.insurance.InsuranceReasone": "Insurance Reasone",
   "boilerplate.containers.Payroll.insurance.orgName": "orgName",
   "boilerplate.containers.Payroll.insurance.hiringDate": "Hiring Date",
+  "boilerplate.containers.Payroll.insurance.toDate": "To Date",
   "boilerplate.containers.Payroll.insurance.job": "Job",
+  "boilerplate.containers.Payroll.insurance.gender": "Gender",
   "boilerplate.containers.Payroll.insurance.birthDate": "Birth Date",
   "boilerplate.containers.Payroll.insurance.notes": "Notes",
   "boilerplate.containers.Payroll.insurance.BranchName": "Branch Name",
