--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1131,6 +1131,7 @@
     "boilerplate.containers.Payroll.Attendance.EmpCode": "كود الموظف",
     "boilerplate.containers.Payroll.Attendance.employeeName":"اسم الموظف",
     "boilerplate.containers.Payroll.Attendance.missionDays":"ايام المأمورية",
+    "boilerplate.containers.Payroll.Attendance.weekend":"الاجازه الاسبوعية",
   
   
   
