--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1095,6 +1095,7 @@
   "boilerplate.containers.Payroll.Attendance.EmpCode":"Emp.Code",
   "boilerplate.containers.Payroll.Attendance.employeeName":"Employee Name",
   "boilerplate.containers.Payroll.Attendance.missionDays":"Mission Days",
+  "boilerplate.containers.Payroll.Attendance.weekend":"Weekend",
   
   "boilerplate.containers.Payroll.Workflow.documentName": "Document Name",
   "boilerplate.containers.Payroll.Workflow.step": "Step",
